# windows-driver-input-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  backend.py  main.py  manifest.json  pyproject.toml  rate.py  server.json
IbInputSimulator/: IbInputSimulator.ahk
IbInputSimulator/test/: KeyHistory.ahk  mode 0.ahk  mode 1.ahk  mode ahk.ahk  type DD.ahk  type Logitech.ahk  type MouClassInputInjection.ahk  type Razer.ahk  type SendInput.ahk
